# AG_Tema-Norbs

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  KDTree.cpp  KDTree.h  MainWindow.cpp  MainWindow.h  README.md  VERIFICATION.md  XMLParser.cpp  XMLParser.h  main.cpp  test_components.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  test_components
_codeql_build_dir/DijkstraPathVisualizer_autogen/: deps
_codeql_build_dir/DijkstraPathVisualizer_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
_codeql_build_dir/test_components_autogen/: deps  moc_predefs.h
